[gd_scene load_steps=5 format=3 uid="uid://dmkru77pj6kwb"]

[ext_resource type="Script" path="res://scripts/lp_raw_patty.gd" id="1_3yi85"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xvtxw"]
resource_local_to_scene = true
albedo_color = Color(0.996078, 0.501961, 0.494118, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7ej6q"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_xvtxw")

[sub_resource type="BoxShape3D" id="BoxShape3D_nfu2f"]
size = Vector3(0.400481, 0.0936634, 0.407457)

[node name="lp_raw_patty" type="RigidBody3D"]
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_3yi85")
metadata/raw_patty = true

[node name="Cylinder" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.04, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("CylinderMesh_7ej6q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000628753, 0)
shape = SubResource("BoxShape3D_nfu2f")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="burntimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="burntimer" to="." method="_on_burntimer_timeout"]
